Replace deprecated Class#newInstance() with Class#getDeclaredConstructor#newInstance()